bug fixed in bottom navigation selected.changed ic bottom_nav_menu.

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/profile_menu"
+        android:id="@+id/navigation_profile"
         android:title="@string/title_profile"
-        android:icon="@android:drawable/ic_dialog_alert" />
+        android:icon="@drawable/ic_person_24" />
 
     <item
-        android:id="@+id/repo_list_menu"
+        android:id="@+id/navigation_repo_list"
         android:title="@string/title_repo_list"
-        android:icon="@android:drawable/ic_lock_idle_alarm"/>
+        android:icon="@drawable/ic_list_24"/>
 
 </menu>
