--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,12 +9,12 @@
         android:id="@+id/navigation_repo_list"
         android:name="com.shahin.githubprofile.ui.repolist.RepositoryListFragment"
         tools:layout="@layout/fragment_repository_list"
-        android:label="@string/title_repo_list"/>
+        android:label="@string/title_repo_list_fragment"/>
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.shahin.githubprofile.ui.profile.ProfileFragment"
         tools:layout="@layout/fragment_profile"
-        android:label="@string/title_profile"/>
+        android:label="@string/title_profile_fragment"/>
 
 </navigation>
